crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__extended_test__parse_extended_test_arith_less_than.snap
---
source: cash-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ 3 -lt 5 ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(ArithmeticLessThan, Word(
                  value: "3",
                  loc: "[location]",
                ), Word(
                  value: "5",
                  loc: "[location]",
                )),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
