crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__extended_test__parse_extended_test_directory.snap
---
source: cash-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -d /path/to/dir ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: UnaryTest(FileExistsAndIsDir, Word(
                  value: "/path/to/dir",
                  loc: "[location]",
                )),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
